Don't remember what I did here, but I forgot to commit

--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
                                 In 2015, I graduated from the Rochester Institute of Technology in Rochester, New York
                                 with a BSc in Game Design & Development. I then moved directly to Los Angeles,
                                 California (talk about a drastic change in climate) where I got a MFA in Interactive Media
-                                at the University of Southern California in 2018. I currently reside in Los Angeles, CA.
+                                at the University of Southern California in 2018.
                             </p>
                         </div>
                         <div>
