--- a/projects/lindolphosboxofephemera.html
+++ b/projects/lindolphosboxofephemera.html
@@ -156,7 +156,7 @@
                             <nav id="navbar-tableofcontents" class="flex-column align-items-stretch pe-4">
                                 <nav class="nav nav-pills flex-column">
                                     <a class="nav-link" href="#overview">Lindolpho's Box of Ephemera</a>
-                                    <a class="nav-link" href="#about">About</a>
+                                    <a class="nav-link" href="#moreInformation">More Information</a>
                                 </nav>
                             </nav>
                         </div>
@@ -172,9 +172,13 @@
                             <div class="row py-3">
                                 <div class="col-md-6 pb-3">
                                     <p class="lead">
-                                        Play in English or Portuguese as you visit vignettes of writer Lindolpho Espeschit's life by piecing together a collage of images, letters, and sounds in this short interactive experience.
+                                        Visit vignettes of writer Lindolpho Espeschit's life by piecing together a collage of images, letters, and sounds in this short interactive experience.
                                     </p>
-                                    <p class="lead">
+                                    <p>
+                                        Lindolpho's Box of Ephemera was created for <a href="https://itch.io/jam/hidden-heroes-jam" class="text-decoration-none">IndieCade's Hidden Hero's Game Jam</a> back in <span class="fw-bold">February 2023</span>. I teamed up with my former USC classmate
+                                        <span class="fw-bold">Gabriela Purri Gomes</span> and her sister <span class="fw-bold">Giulia Purri Gomes</span> to create an interactive experience based on their great-grandfather, Lindolpho Espeschit.
+                                    </p>
+                                    <p>
                                         This project is available to play for free on <a href="https://kpustolski.itch.io/lindolphos-box-of-ephemera" class="text-decoration-none">itch.io.</a>
                                     </p>
                                 </div>
@@ -209,34 +213,26 @@
                             </div>
                         </div>
 
-                        <div id="about" class="container my-3 py-3">
+                        <div id="moreInformation" class="container my-3 py-3">
                             <div class="row">
-                                <h2> About </h2>
+                                <h2>More information</h2>
                             </div>
-                            <div class="row row-cols-1 row-cols-lg-2 py-3 py-lg-0">
+                            <div class="row row-cols-1 row-cols-lg-2 py-3 py-lg-3">
                                 <div class="col pe-5">
-                                    <p>
-                                        Lindolpho's Box of Ephemera was created for <a href="https://itch.io/jam/hidden-heroes-jam" class="text-decoration-none">IndieCade's Hidden Hero's Game Jam</a> back in <span class="fw-bold">February 2023</span>. I teamed up with my former USC classmate
-                                        <span class="fw-bold">Gabriela Purri Gomes</span> and her sister <span class="fw-bold">Giulia Purri Gomes</span> to create an interactive experience based on their great-grandfather, Lindolpho Espeschit.
-                                    </p>
                                     <p>
                                         Born in 1896, Lindolpho was a journalist and writer from Brazil who published his first book and biography at the age of 98 years old, four years before his death at age 102. He was chosen for the rich stories and accounts he left behind in his book, and his great-granddaughters' wish to explore his legacy and the history of their German ancestors' migration to Brazil. While our main source of inspiration was his book, we also interviewed one of his last remaining daughters and explored a large archive of photos, footage and memorabilia different members of the family have kept along the years. 
                                     </p>
-                                </div>
-                                <div class="col img-box">
-                                    <a href="../images/projects/lindolphoboxofephemera/about_01.png" data-toggle="lightbox">
-                                        <img src="../images/projects/lindolphoboxofephemera/about_01.png" class="img-fluid rounded" alt="about_01.png">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
                                     <p>
                                         We all collaborated in designing this experience. As the point engineer on the team, I handled most of building the project in the <span class="fw-bold">Unity Game Engine</span> while my teammates gathered information on Lindolpho, created the assets, and handled the Portuguese translation used in the project. The most challenging part of this project was that we were spreadout across different countries and time zones. At the time Gabi was in Germany 🇩🇪, Giulia was in Portugal 🇵🇹, and I was in the United States 🇺🇸.
                                     </p>
                                     <p>
                                         More information can be found on the <a href="https://kpustolski.itch.io/lindolphos-box-of-ephemera" class="text-decoration-none">itch.io</a> page.
                                     </p>
+                                </div>
+                                <div class="col img-box">
+                                    <a href="../images/projects/lindolphoboxofephemera/about_01.png" data-toggle="lightbox">
+                                        <img src="../images/projects/lindolphoboxofephemera/about_01.png" class="img-fluid rounded" alt="about_01.png">
+                                    </a>
                                 </div>
                             </div>
                         </div>
