--- a/projects/potionsplease.html
+++ b/projects/potionsplease.html
@@ -176,7 +176,7 @@
                                         for the townfolk in various locations.
                                     </p>
                                     <p>
-                                        Potions Please! had a limited release and unfortunetly was shelved before it was fully released prior to Nix Hydra's acquisition by <a href="https://home.dorian.live/" class="text-decoration-none">Dorian.live</a>.
+                                        Potions Please! had a limited release and unfortunetly was shelved prior to Nix Hydra's acquisition by <a href="https://home.dorian.live/" class="text-decoration-none">Dorian.live</a>.
                                     </p>
                                 </div>
                                 <div class="col img-box">
