--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -319,7 +319,7 @@
                                             <li><a class="text-decoration-none" href="https://www.linkedin.com/in/michelleeolson/">Michelle Olson</a> - Game Designer</li>
                                             <li><a class="text-decoration-none" href="https://www.linkedin.com/in/sam-celeste-80265174/">Sam Celeste</a> - Game Designer</li>
                                             <li><a class="text-decoration-none" href="https://www.linkedin.com/in/blair-devereaux-41bb81148/">Blair Devereaux</a> - Sound Designer</li>
-                                            <li><a class="text-decoration-none" href="https://www.linkedin.com/in/blair-devereaux-41bb81148/">Sarah Trevino</a> - Music Composer</li>
+                                            <li><a class="text-decoration-none" href="https://trevinomedia.com/">Sarah Trevino</a> - Music Composer</li>
                                         </ul>
                                     </p>
                                     <p>
@@ -342,9 +342,9 @@
                                 <div class="col">
                                     <p>
                                         Stepstone Island was born out of wanting to combine my interest of idle games with the
-                                        fitness data collected on my FitBit wristband. I was inspired by idle-games like Neko
-                                        Atsume and Tap Tap Fish, and wanted to create a more relaxed fitness game option
-                                        opposite of Zombies, Run!.
+                                        fitness data collected on my FitBit wristband. I was inspired by idle-games like <span class="fst-italic">Neko
+                                        Atsume</span> and <span class="fst-italic">Tap Tap Fish</span>, and wanted to create a more relaxed fitness game option
+                                        opposite of <span class="fst-italic">Zombies, Run!</span>.
                                     </p>
                                     <p>
                                         <h3 class="py-2">Audience Experience Goals</h3>
@@ -388,9 +388,9 @@
                                         Unity via the BEHealth Kit plug-in.
                                     </p>
                                     <p>
-                                        Initially, prototypes followed a more unfolding set of mechanics, similar to that of A Dark
-                                        Room by Double Speak Games. However, other games like the Animal Crossing
-                                        franchise and Stardew Valley started influencing it as time went on. The premise of
+                                        Initially, prototypes followed a more unfolding set of mechanics, similar to that of <span class="fst-italic">A Dark
+                                        Room</span> by Double Speak Games. However, other games like the <span class="fst-italic">Animal Crossing</span>
+                                        franchise and <span class="fst-italic">Stardew Valley</span> started influencing it as time went on. The premise of
                                         cleaning an environment came in later when my team was recruited in Fall 2017. It
                                         turned out to be a great parallel; improving the island while you improved your own
                                         exercise habits.
