Updated how each professional project is presented on the index.html page

--- a/index.html
+++ b/index.html
@@ -120,34 +120,170 @@
                     <div class="section-header">Professional Projects</div>
                     <div class="text-body-secondary fw-light fst-italic ">Released projects that I have contributed to at various studios.</div>
                 </div>
-                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3">
-                    <div class="col">
-                        <a href="projects/marvelsnap.html">
-                            <div class="card">
-                                <img src="images/thumbnails/thumbnail_projects_marvel_snap.png" class="card-img" alt="thumbnail_projects_marvel_snap.png">
+                <div class="row row-cols-1 pt-3 pb-4">
+                    <div class="col col-lg-5">
+                        <div class="col">
+                            <a href="images/thumbnails/thumbnail_projects_marvel_snap.png" data-toggle="lightbox" data-gallery="snap-gallery">
+                                <img src="images/thumbnails/thumbnail_projects_marvel_snap.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_projects_marvel_snap.png">
+                            </a>
+                        </div>
+                        <div class="row g-2">
+                            <div class="col img-box">
+                                <a href="images/projects/marvelsnap/gallery_02.png" data-toggle="lightbox" data-gallery="snap-gallery">
+                                    <img src="images/projects/marvelsnap/thumbnails/thumbnail_gallery_02.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_02.png"/>
+                                </a>
                             </div>
-                        </a>
+                            <div class="col img-box">
+                                <a href="images/projects/marvelsnap/gallery_03.png" data-toggle="lightbox" data-gallery="snap-gallery">
+                                    <img src="images/projects/marvelsnap/thumbnails/thumbnail_gallery_03.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_03.png"/>
+                                </a>
+                            </div>
+                            <div class="col img-box">
+                                <a href="images/projects/marvelsnap/gallery_04.png" data-toggle="lightbox" data-gallery="snap-gallery">
+                                    <img src="images/projects/marvelsnap/thumbnails/thumbnail_gallery_04.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_04.png"/>
+                                </a>
+                            </div>
+                            <div class="col img-box">
+                                <a href="images/projects/marvelsnap/gallery_05.png" data-toggle="lightbox" data-gallery="snap-gallery">
+                                    <img src="images/projects/marvelsnap/thumbnails/thumbnail_gallery_05.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_05.png"/>
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col">
-                        <a href="projects/fictif.html">
-                            <div class="card">
-                                <img src="images/thumbnails/thumbnail_projects_fictif.png" class="card-img" alt="thumbnail_projects_fictif.png">
-                            </div>
-                        </a>
+                    <div class="col col-lg-7 py-lg-0 py-3">
+                        <h3> Marvel Snap </h3>
+                        <p class="lead">
+                            Marvel Snap is an award winning, digital collectable card game developed by <a href="https://seconddinner.com/" class="text-decoration-none"><span class="fw-bold">Second Dinner</span></a>. 
+                            The core gameplay of Snap involves creating a deck of twelve unique Marvel characters and battling against another player to win
+                            two out of the three locations on the board.
+                        </p>
+                        <p>
+                            More information on the game can be found at <a href="https://marvelsnap.com/" class="text-decoration-none">https://marvelsnap.com/</a>.
+                        </p>
                     </div>
-                    <div class="col">
-                        <a href="projects/potionsplease.html">
-                            <div class="card">
-                                <img src="images/thumbnails/thumbnail_projects_potions_please.png" class="card-img" alt="thumbnail_projects_potions_please.png">
+                </div>
+                <div class="row row-cols-1 py-4">
+                    <div class="col col-lg-5">
+                        <div class="col">
+                            <a href="images/thumbnails/thumbnail_projects_fictif.png" data-toggle="lightbox" data-gallery="fictif-gallery">
+                                <img src="images/thumbnails/thumbnail_projects_fictif.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_projects_fictif.png">
+                            </a>
+                        </div>
+                        <div class="row g-2">
+                            <div class="col img-box">
+                                <a href="images/projects/fictif/gallery_02.png" data-toggle="lightbox" data-gallery="fictif-gallery">
+                                    <img src="images/projects/fictif/thumbnails/thumbnail_gallery_02.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_02.png"/>
+                                </a>
                             </div>
-                        </a>
+                            <div class="col img-box">
+                                <a href="images/projects/fictif/gallery_03.png" data-toggle="lightbox" data-gallery="fictif-gallery">
+                                    <img src="images/projects/fictif/thumbnails/thumbnail_gallery_03.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_03.png"/>
+                                </a>
+                            </div>
+                            <div class="col img-box">
+                                    <a href="images/projects/fictif/gallery_05.png" data-toggle="lightbox" data-gallery="fictif-gallery">
+                                    <img src="images/projects/fictif/thumbnails/thumbnail_gallery_05.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_05.png"/>
+                                </a>
+                            </div>
+                            <div class="col img-box">
+                                <a href="images/projects/fictif/gallery_04.png" data-toggle="lightbox" data-gallery="fictif-gallery">
+                                    <img src="images/projects/fictif/thumbnails/thumbnail_gallery_04.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_04.png"/>
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col">
-                        <a href="projects/thearcana.html">
-                            <div class="card shadow">
-                                <img src="images/thumbnails/thumbnail_projects_the_arcana.png" class="card-img" alt="thumbnail_projects_the_arcana.png">
+                    <div class="col col-lg-7 py-lg-0 py-3">
+                        <h3> Fictif </h3>
+                        <p class="lead">
+                            Fictif is a collection of otomie inspired interactive visual novels. Similar to The Arcana, players play as the main character and choose which character they like to romance throughout each story.
+                        </p>
+                        <p>
+                            Fictif was initially developed by a company called Nix Hydra, but is now owned and maintained by <a href="https://home.dorian.live/" class="text-decoration-none">Dorian.live</a>.
+                        </p>
+                    </div>
+                </div>
+                <div class="row row-cols-1 py-4">
+                    <div class="col col-lg-5">
+                        <div class="col">
+                            <a href="images/thumbnails/thumbnail_projects_potions_please.png" data-toggle="lightbox" data-gallery="potionsplease-gallery">
+                                <img src="images/thumbnails/thumbnail_projects_potions_please.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_projects_potions_please.png">
+                            </a>
+                        </div>
+                        <div class="row g-2">
+                            <div class="col img-box">
+                                <a href="images/projects/potionsplease/gallery_02.png" data-toggle="lightbox" data-gallery="potionsplease-gallery">
+                                    <img src="images/projects/potionsplease/thumbnails/thumbnail_gallery_02.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_02.png"/>
+                                </a>
                             </div>
-                        </a>
+                            <div class="col img-box">
+                                <a href="images/projects/potionsplease/gallery_04.png" data-toggle="lightbox" data-gallery="potionsplease-gallery">
+                                    <img src="images/projects/potionsplease/thumbnails/thumbnail_gallery_04.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_04.png"/>
+                                </a>
+                            </div>
+                            <div class="col img-box">
+                                <a href="images/projects/potionsplease/gallery_05.png" data-toggle="lightbox" data-gallery="potionsplease-gallery">
+                                    <img src="images/projects/potionsplease/thumbnails/thumbnail_gallery_05.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_05.png"/>
+                                </a>
+
+                            </div>
+                            <div class="col img-box">
+                                    <a href="images/projects/potionsplease/gallery_03.png" data-toggle="lightbox" data-gallery="potionsplease-gallery">
+                                    <img src="images/projects/potionsplease/thumbnails/thumbnail_gallery_03.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_03.png"/>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-lg-7 py-lg-0 py-3">
+                        <h3> Potions Please! </h3>
+                        <p class="lead">
+                            Potions Please! was a narrative based adventure game where the player acted as an apprentice to a traveling potion maker.
+                            The gameplay focused around collecting ingredients through mini games and progressing the narrative by brewing potions
+                            for the townfolk in various locations.
+                        </p>
+                        <p>
+                            Potions Please! had a limited release and unfortunetly was shelved prior to Nix Hydra's acquisition by <a href="https://home.dorian.live/" class="text-decoration-none">Dorian.live</a>.
+                        </p>
+                    </div>
+                </div>
+                <div class="row row-cols-1 pt-4">
+                    <div class="col col-lg-5">
+                        <div class="col">
+                            <a href="images/thumbnails/thumbnail_projects_the_arcana.png" data-toggle="lightbox" data-gallery="thearcana-gallery">
+                                <img src="images/thumbnails/thumbnail_projects_the_arcana.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_projects_the_arcana.png">
+                            </a>
+                        </div>
+                        <div class="row g-2">
+                            <div class="col img-box">
+                                <a href="images/projects/thearcana/gallery_02.png" data-toggle="lightbox" data-gallery="thearcana-gallery">
+                                    <img src="images/projects/thearcana/thumbnails/thumbnail_gallery_02.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_02.png"/>
+                                </a>
+                            </div>
+                            <div class="col img-box">
+                                <a href="images/projects/thearcana/gallery_04.png" data-toggle="lightbox" data-gallery="thearcana-gallery">
+                                    <img src="images/projects/thearcana/thumbnails/thumbnail_gallery_04.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_04.png"/>
+                                </a>
+                            </div>
+                            <div class="col img-box">
+                                <a href="images/projects/thearcana/gallery_05.png" data-toggle="lightbox" data-gallery="thearcana-gallery">
+                                    <img src="images/projects/thearcana/thumbnails/thumbnail_gallery_05.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_05.png"/>
+                                </a>
+
+                            </div>
+                            <div class="col img-box">
+                                <a href="images/projects/thearcana/gallery_03.png" data-toggle="lightbox" data-gallery="thearcana-gallery">
+                                    <img src="images/projects/thearcana/thumbnails/thumbnail_gallery_03.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_03.png"/>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-lg-7 py-lg-0 py-3">
+                        <h3> The Arcana </h3>
+                        <p class="lead">
+                            Taking inspiration from tarot and otome style love stories, The Arcana is a mobile interactive visual novel where players play as the main character and choose one of six characters to romance throughout the main story.
+                        </p>
+                        <p>
+                            The Arcana was initially developed by a company called Nix Hydra, but is now owned and maintained by <a href="https://home.dorian.live/" class="text-decoration-none">Dorian.live</a>.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -207,10 +343,16 @@
       </footer>
     </div>
 
+
+     <!-- Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
       crossorigin="anonymous"
     ></script>
+
+    <!-- bs5-lightbox -->
+    <!-- By  Travis Aaron Wagner: https://trvswgnr.github.io/bs5-lightbox/ -->
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.5/dist/index.bundle.min.js"></script>
   </body>
 </html>
