Removed link to The Arcana in lindolphosboxofephemera.html

--- a/projects/lindolphosboxofephemera.html
+++ b/projects/lindolphosboxofephemera.html
@@ -121,17 +121,7 @@
             </header>
             <!-- Project Navigation -->
             <div class="container-fluid">
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <a class="fs-4 text-decoration-none me-md-auto" href="thearcana.html">
-                            <span class="icon-link">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
-                                <use href="#arrow-left-circle"></use>
-                            </svg>
-                            The Arcana
-                            </span>
-                        </a>
-                    </div>
+                <div class="d-flex justify-content-end">
                     <div>
                         <a class="fs-4 text-decoration-none me-md-auto" href="stepstoneisland.html">
                             <span class="icon-link">
