Added some text style and fonts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
         crossorigin="anonymous"
         />
+
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet" />
+        
+        <!-- Color Picker js -->
         <script src="js/colorpicker.js"></script>
     </head>
 
@@ -40,10 +47,10 @@
 
     <!-- Navigation -->
     <div class="container">
-        <header class="pt-3 my-3 border-bottom container-fluid">
+        <header class="pt-3 my-3 container-fluid">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="fs-4 d-flex link-body-emphasis text-decoration-none mb-3 mb-md-0 me-md-auto" href="index.html">
+                    <a class="fs-4 d-flex link-body-emphasis text-decoration-none mb-3 mb-md-0 me-md-auto name-title" href="index.html">
                         <span class="icon-link">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
                             <use href="#game-controller"></use>
@@ -115,10 +122,10 @@
       <!-- Body -->
       <div class="container my-5">
         <main>
-            <div class="container my-5">
-                <div class="row row-cols-1 pb-3">
-                    <div class="section-header">Professional Projects</div>
-                    <div class="text-body-secondary fw-light fst-italic ">Released projects that I have contributed to at various studios.</div>
+            <div class="container">
+                <div class="row row-cols-1 pb-3 section-header">
+                    <h1>Professional Projects</h1>
+                    <p>Released projects that I have contributed to at various studios.</p>
                 </div>
                 <div class="row row-cols-1 pt-3 pb-4">
                     <div class="col col-lg-5">
@@ -150,8 +157,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-7 py-lg-0 py-3">
-                        <h3> Marvel Snap </h3>
+                    <div class="col col-lg-7 py-lg-0 py-3 index-game-title">
+                        <h1> Marvel Snap </h1>
                         <p class="lead">
                             Marvel Snap is an award winning, digital collectable card game developed by <a href="https://seconddinner.com/" class="text-decoration-none"><span class="fw-bold">Second Dinner</span></a>. 
                             The core gameplay of Snap involves creating a deck of twelve unique Marvel characters and battling against another player to win
@@ -192,8 +199,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-7 py-lg-0 py-3">
-                        <h3> Fictif </h3>
+                    <div class="col col-lg-7 py-lg-0 py-3 index-game-title">
+                        <h1> Fictif </h1>
                         <p class="lead">
                             Fictif is a collection of otomie inspired interactive visual novels. Similar to The Arcana, players play as the main character and choose which character they like to romance throughout each story.
                         </p>
@@ -233,8 +240,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-7 py-lg-0 py-3">
-                        <h3> Potions Please! </h3>
+                    <div class="col col-lg-7 py-lg-0 py-3 index-game-title">
+                        <h1>Potions Please!</h1>
                         <p class="lead">
                             Potions Please! was a narrative based adventure game where the player acted as an apprentice to a traveling potion maker.
                             The gameplay focused around collecting ingredients through mini games and progressing the narrative by brewing potions
@@ -276,8 +283,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-7 py-lg-0 py-3">
-                        <h3> The Arcana </h3>
+                    <div class="col col-lg-7 py-lg-0 py-3 index-game-title">
+                        <h1> The Arcana </h1>
                         <p class="lead">
                             Taking inspiration from tarot and otome style love stories, The Arcana is a mobile interactive visual novel where players play as the main character and choose one of six characters to romance throughout the main story.
                         </p>
@@ -287,11 +294,11 @@
                     </div>
                 </div>
             </div>
-
+            <hr>
             <div class="container my-5">
-                <div class="row row-cols-1 pb-3">
-                    <div class="section-header">Personal Projects</div>
-                    <div class="text-body-secondary fw-light fst-italic ">A curated list of old student projects, game jam games, etc.</div>
+                <div class="row row-cols-1 pb-3 section-header">
+                    <h1 class="section-header">Personal Projects</h1>
+                    <p>A curated list of old student projects, game jam games, etc.</p>
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3">
                     <div class="col">
