Updates to index.html
* Assigned section-header class
* Added border bottom back
* Updated nav to be underline style

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- Navigation -->
     <div class="container">
-        <header class="pt-3 my-3 container-fluid">
+        <header class="pt-3 my-3 container-fluid border-bottom">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="fs-4 d-flex link-body-emphasis text-decoration-none mb-3 mb-md-0 me-md-auto name-title" href="index.html">
@@ -62,7 +62,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div id="navbarToggle" class="collapse navbar-collapse justify-content-sm-end py-3">
-                        <ul class="nav nav-pills flex-column flex-lg-row">
+                        <ul class="nav nav-underline flex-column flex-lg-row">
                             <li class="nav-item px-2">
                                 <a class="nav-link active" aria-current="page" href="Index.html">Projects</a>
                             </li>
@@ -157,8 +157,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-7 py-lg-0 py-3 index-game-title">
-                        <h1> Marvel Snap </h1>
+                    <div class="col col-lg-7 py-lg-0 py-3 section-header">
+                        <h2> Marvel Snap </h2>
                         <p class="lead">
                             Marvel Snap is an award winning, digital collectable card game developed by <a href="https://seconddinner.com/" class="text-decoration-none"><span class="fw-bold">Second Dinner</span></a>. 
                             The core gameplay of Snap involves creating a deck of twelve unique Marvel characters and battling against another player to win
@@ -199,8 +199,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-7 py-lg-0 py-3 index-game-title">
-                        <h1> Fictif </h1>
+                    <div class="col col-lg-7 py-lg-0 py-3 section-header">
+                        <h2> Fictif </h2>
                         <p class="lead">
                             Fictif is a collection of otomie inspired interactive visual novels. Similar to The Arcana, players play as the main character and choose which character they like to romance throughout each story.
                         </p>
@@ -240,8 +240,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-7 py-lg-0 py-3 index-game-title">
-                        <h1>Potions Please!</h1>
+                    <div class="col col-lg-7 py-lg-0 py-3 section-header">
+                        <h2>Potions Please!</h2>
                         <p class="lead">
                             Potions Please! was a narrative based adventure game where the player acted as an apprentice to a traveling potion maker.
                             The gameplay focused around collecting ingredients through mini games and progressing the narrative by brewing potions
@@ -283,8 +283,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-7 py-lg-0 py-3 index-game-title">
-                        <h1> The Arcana </h1>
+                    <div class="col col-lg-7 py-lg-0 py-3 section-header">
+                        <h2> The Arcana </h2>
                         <p class="lead">
                             Taking inspiration from tarot and otome style love stories, The Arcana is a mobile interactive visual novel where players play as the main character and choose one of six characters to romance throughout the main story.
                         </p>
@@ -294,7 +294,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="container my-5">
                 <div class="row row-cols-1 pb-3 section-header">
                     <h1 class="section-header">Personal Projects</h1>
